fix right scrollbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,18 +31,30 @@
 @layer components {
   * {
     border-color: hsl(var(--border));
+    box-sizing: border-box;
   }
 
-  html, body {
+  html {
     overflow-x: hidden;
-    max-width: 100vw;
+    width: 100%;
   }
 
   body {
+    overflow-x: hidden;
+    width: 100%;
+    margin: 0;
+    padding: 0;
     font-family: sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: hsl(var(--background));
     color: hsl(var(--foreground));
+  }
+
+  #root {
+    overflow-x: hidden;
+    width: 100%;
+    margin: 0;
+    padding: 0;
   }
 }
